--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~52.0.41",
     "expo-dev-client": "~5.0.15",
     "expo-font": "~13.0.4",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
@@ -28,14 +29,19 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture": "^0.2.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
