--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "expo": "~52.0.41",
     "expo-dev-client": "~5.0.15",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
+    "expo-video": "~2.0.6",
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -41,7 +43,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17",
-    "expo-image-picker": "~16.0.6"
+    "expo-blur": "~14.0.3",
+    "undefined": "react-native-vector-icons/fontAwesome"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
